@@ -3,6 +3,11 @@ Version 1.6.7
 *******************************************************************************
 
 2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	* SSDP_IPV6_SITELOCAL: new macro.
+	
+	Patch submitted by Ronan Menard.
+
+2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	* The scope of the macro NUM_HANDLE is now restricted to upnpapi.c.
 
 2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
